--- a/public/css/components/servicios-academia/asesorias-especializadas.css
+++ b/public/css/components/servicios-academia/asesorias-especializadas.css
@@ -45,20 +45,26 @@
     width: 100%;
     height: auto;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
     gap: 10px;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 @media (min-width:2000px ){
     .comoSolicitarAsesoriasCardsContainer{
         width: 85%;
     }
 }
+.comoSolicitarAsesoriasCardsContainer:hover {
+    overflow-x: auto;
+}
 /* Estilo de las cards de la subsección "¿Qué ofrecemos?" */
 .comoSolicitarAsesoriasCard {
-    width: 30%;
+    flex: 0 0 calc(33.33% - 10px);
     height: 688px;
-    flex-shrink: 1;
+    flex-shrink: 0;
     border-radius: var(--Corner-Large, 16px);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     position: relative;
@@ -66,7 +72,13 @@
     justify-content: center;
     flex-wrap: wrap;
     align-content: flex-start;
-    margin: 0 auto;
+    margin: 0;
+}
+
+@media(max-width:800px){
+    .comoSolicitarAsesoriasCard{
+        flex: 0 0 calc(50% - 10px);
+    }
 }
 
 /* Estilos de la figura de la card */
@@ -86,7 +98,7 @@
 
 /* Estilo para el titulo de la card */
 .comoSolicitarAsesoriasCardTitle {
-    width: 380px;
+    width:90%;
     color: #FFF;
     font-family: Montserrat;
     font-size: 40px;
@@ -100,7 +112,7 @@
 
 /* Estilo para el contenido de la card */
 .comoSolicitarAsesoriasCardContent {
-    width: 80%;
+    width: 90%;
     color: #FFF;
     font-family: Montserrat;
     font-size: 30px;
@@ -109,12 +121,12 @@
     line-height: normal;
     letter-spacing: 0.32px;
     position: absolute;
-    bottom: 40px;
-    left: 80px;
+    bottom: 20px;
+    left: 40px;
 }
-@media (max-width: 1200px){
+@media (max-width: 1100px){
     .comoSolicitarAsesoriasCardContent{
-        font-size: 20px;
+        font-size: 25px;
         left: 20px;
         bottom: 10px;
     }
