--- a/public/css/components/servicios-academia/objetivos-card.css
+++ b/public/css/components/servicios-academia/objetivos-card.css
@@ -8,13 +8,7 @@
     overflow: hidden;
 
 }
-@media (max-width: 1400px) {
-    .objetivosDeLaIncorporacionDeHciCard {
-        width: 90%; /* Ajusta el ancho a un 85% para reducir el espacio a la derecha */        
-        margin-left: 5%; /* Añade un margen izquierdo para mantener el espacio */
-       
-    }
-}
+
 @media (min-width: 1400px) {
     .objetivosDeLaIncorporacionDeHciCard {
         width: 90%; /* Ajusta el ancho a un 85% para reducir el espacio a la derecha */        
@@ -24,9 +18,9 @@
 }
 /* Estilo del titulo de la card */
 .objetivosDeLaIncorporacionDeHciCardTitle {
-    margin-top: 40px;
-    margin-left: 10% ;
-    width: 670px;
+    
+    margin: 40px auto 0 auto;
+    width: 80%;
     height: auto;
     flex-shrink: 0;
     color: #FFF;
@@ -35,17 +29,16 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    text-align: center;
   
 }
 
 
 /* Estilo del texto de la card */
 .objetivosDeLaIncorporacionDeHciCardText {
-    margin-top: 80px;
-    margin-left: auto;  /* Centra el contenedor automáticamente */
-    margin-right: auto;
-    padding-bottom: 20px;
-    width: 70%;
+  
+    padding: auto;
+    width: 100%;
     height: auto;
     flex-shrink: 0;
     color: #FFF;
@@ -54,7 +47,7 @@
     font-size: 32px;
     font-style: normal;
     font-weight: 400;
-    line-height: normal;
+    line-height: 1.1;
     letter-spacing: 0.32px;
 }
 
