--- a/public/css/components/servicios-industria/capacitacion-y-formacion.css
+++ b/public/css/components/servicios-industria/capacitacion-y-formacion.css
@@ -6,6 +6,7 @@
     flex-wrap: wrap;
     justify-content: center;
     align-content: flex-start;
+    align-items: center;
 }
 
 /* Estilo para el titulo de la sección */
@@ -25,15 +26,18 @@
 
 /* Estilo para más información de la sección */
 .masInformacionCapacitacionYFormacionContainer {
+    display: flex;
+    align-items: center;  
     margin-top: 80px;
     width: 100%;
     height: 435px;
     flex-shrink: 0;
+  
 }
 
 /* Estilo para el texto de mas información de la sección */
 .masInformacionCapacitacionYFormacion {
-    margin-top: 84px;
+   
     color: #FFF;
     text-align: center;
     font-family: Montserrat;
@@ -42,6 +46,9 @@
     font-weight: 400;
     line-height: normal;
     letter-spacing: 0.32px;
+    padding-left: 100px;
+    padding-right: 100px;
+    align-items: center;
 }
 
 /* Estilo para el subtitulo de la sección */
