--- a/public/css/components/servicios-academia/acceso-a-laboratorio.css
+++ b/public/css/components/servicios-academia/acceso-a-laboratorio.css
@@ -41,15 +41,15 @@
 }
 
 .pasosParaReservacionCardsContainer {
-    width: 98%;
-    height: auto;
     display: flex;
-    overflow-x: hidden;
-    gap: 40px;
+    flex-wrap: nowrap; /* IMPORTANTE: para scroll horizontal */
+    overflow-x: auto;   /* Siempre muestra scroll cuando se necesita */
+    gap: 20px;
+    width: 100%;
     box-sizing: border-box;
-    margin-left: 2%;
+    padding: 10px;
+    scroll-behavior: smooth; /* opcional pero se ve chido */
 }
-
 
 
 /* Mostrar la barra de desplazamiento al hacer hover */
@@ -59,7 +59,7 @@
 
 /* Estilo de las cards de la subsección "Pasos para reservación" */
 .pasoParaReservacionCard {
-    flex: 0 0 calc(33.33% - 20px); 
+    flex: 0 0 calc(33.33% - 80px); 
     height: auto;
     flex-shrink: 0;
     border-radius: 16px;
@@ -68,14 +68,19 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    margin-left: 5%;
 }
 @media(max-width:1000px){
     .pasoParaReservacionCard{
-        flex: 0 0 calc(50% - 20px)
+        flex: 0 0 calc(50% - 60px)
     }
 
 }
-
+@media(max-width:500px){
+    .pasoParaReservacionCard{
+        flex: 0 0 calc(100% - 40px);
+    }
+}
 /* Estilo de número de paso */
 .pasoDeReservacion {
     margin-top: 61px;
