--- a/public/css/components/eventos/cardsEventos.css
+++ b/public/css/components/eventos/cardsEventos.css
@@ -5,10 +5,11 @@
     overflow: hidden;
     position: relative;
     height: 100%;
+    max-width: 18rem;
 }
 
 .ContenedorSVG {
-    width: 101%;
+    width: 102%;
     height: 45%;
     position: absolute;
     top: 0;
@@ -25,29 +26,26 @@
 /************************Estilo para el  titulo de una cards *********************/
 .contenedorTituloCard {
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
+    height: 40%;
     z-index: 2;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1rem 1.5rem;
-    margin-top: 1rem;
+    padding: 0.8rem 1.2rem;
 }
 
 .tituloCard {
     color: #FFF;
     font-family: Montserrat;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     letter-spacing: 0.32px;
 }
 
-
-@media (min-width: 1921px) {
+/* @media (min-width: 1921px) {
     .tituloCard {
         font-size: 1.6rem;
     }
@@ -56,61 +54,29 @@
         margin-top: 0.6rem;
         padding: 0.6rem 1.2rem;
     }
-}
+} */
 
-@media (min-width: 1025px) and (max-width: 1440px) {
+@media (max-width: 1365px) {
     .contenedorCard {
-        flex: 1 1 calc(50% - 4rem);
-        max-width: 30%;
+        flex: 1 1 calc(50% - 2rem);
         height: calc(50% - 2rem);
-        min-height: 360px;
-    }
-
-    .contenedorTituloCard {
-        margin-top: 0.2rem;
-        padding: 0.2rem 1rem;
+        max-width: 15rem;
     }
 }
 
-@media (min-width: 821px) and (max-width: 1024px) {
-    .tituloCard {
-        font-size: 1.6rem;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 820px) {
-    .tituloCard {
-        font-size: 1.2rem;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 1024px) {
-    .contenedorCard {
-        flex: 1 1 calc(50% - 1rem);
-        max-width: 40%;
-        height: calc(50% - 3rem);
-    }
-
-    .contenedorTituloCard {
-        margin-top: 0.6rem;
-        padding: 0.6rem 1.2rem;
-    }
-}
-
-@media (min-width: 375px) and (max-width: 430px) {
+@media (max-width: 767px) {
     .contenedorCard {
         flex: 1 1 100%;
-        max-width: 80%; 
+        max-width: 15rem; 
         height: calc(25% - 2rem);
     }
 
-    .tituloCard {
+    /* .tituloCard {
         font-size: 1.2rem;
     }
 
     .contenedorTituloCard {
         margin-top: 0.3rem;
         padding: 0.6rem 1.2rem;
-    }
+    } */
 }
-
