--- a/public/css/components/eventos/concursos.css
+++ b/public/css/components/eventos/concursos.css
@@ -1,40 +1,12 @@
-.contenedorConcursos{
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.contenedorSubtituloConcursos {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-}
-
-.subtituloConcursos {
-    color: #000;
-    text-align: center;
-    font-family: Montserrat;
-    font-size: 3rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-}
-
 .contenedorslider1 {
     width: 100%;
     flex-shrink: 0;
-    margin-top: 5rem;
 }
 
 .contenedorslider2 {
     width: 100%;
     flex-shrink: 0;
-    margin-top: 80px;
-    margin-bottom: 10rem;
+    margin-bottom: calc(1.5 * var(--margin-big));
 }
 
 @media (min-width: 1921px) {
