--- a/public/css/components/eventos/eventos.css
+++ b/public/css/components/eventos/eventos.css
@@ -1,3 +1,13 @@
+:root {
+    --margin-big: 4rem;
+    --margin-med: 2rem;
+
+    --font-size-title: 4rem;
+    --font-size-subtitle: 2rem;
+
+    --card-gap: 1rem;
+}
+
 body {
     width: 100vw;
 }
@@ -6,9 +16,10 @@ body {
     width: 100%;
 }
 
-/* ----- A PARTIR DE AQUÍ ES LA WEA CON LA IMAGEN QUE DICE EVENTOS (LO DE HASTA ARRIBA XD). ----- */
+/* ----- La cosa esa de hasta arriba ----- */ 
 .carousel-inner {
     object-fit: contain;
+    margin-top: var(--margin-med);
 }
 
 .img-container {
@@ -53,9 +64,7 @@ body {
     height: auto;
     width: 100%;
     padding: 1.5rem 2rem;
-    /* Esto está en pixeles porque esta wea tiene una animación que lo deja a -40px en bottom, 
-    no sé porqué xdxdxd. Y esto es lo mejor que se me ocurrió, no me maten por favor :emoji_manos_rezando: */
-    bottom:  40px;
+    bottom: 2rem;
 }
 
 .contenidousalabtxt {
@@ -68,54 +77,89 @@ body {
     box-sizing: border-box;
 }
 
-@media (min-width: 1441px) and (max-width: 2560px) {
-    .titulousalab {
-        font-size: 5rem;
-    }
+/* Contenedores para secciones completas, titulo y subtitulo del apartado de eventos. */
+.eventos-section-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: var(--margin-big);
+    width: 100%;
+}
 
+.eventos-title-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.eventos-title {
+    color: #000;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: var(--font-size-title);
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;;
+}
+
+.eventos-subtitle-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.eventos-subtitle {
+    color: #000;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: var(--font-size-subtitle);
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.eventos-cards-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 85%;
+    height: 50vh;
+    min-height: 20rem;
+    margin-top: var(--margin-med);
+    gap: 1rem;
+}
+
+/* ESTO ES PARA LA SECCIÓN DE 'CARDS', ES LO MISMO PARA TODAS LAS DE ESTE APARTADO. */
+@media (max-width: 1365px) {
+    .eventos-cards-container {
+        width: 75%;
+        height: 40rem;
+        gap: 2rem;
+    }
+}
+
+@media (max-width: 820px) {
     .contenidousalab {
-        padding: 1.5rem 0.5rem;
-    }
-
-    .contenidousalabtxt {
-        font-size: 1.5rem;
+        display: none;
     }
 }
 
-/* @media (min-width: 1025px) and (max-width: 1440px) {
-    .contenidousalab {
-        padding: 1rem 1.5rem;
+@media (max-width: 767px) {
+    :root {
+        --margin-big: 4rem;
+        --margin-med: 2rem;
     }
 
-    .contenidousalabtxt {
-        font-size: 1.5rem;
-    }
-} */
-
-@media (min-width: 768px) and (max-width: 1024px) {
-    .titulousalabtxt {
-        font-size: 2rem;
+    .eventos-title {
+        font-size: 3rem;
     }
 
-    .contenidousalabtxt {
-        font-size: 1rem; 
-    }
-}
-
-@media (min-width: 768px) and (max-width: 896px) {
-    .contenidousalabtxt {
-        font-size: 0.8rem; 
-    }
-}
-
-@media (min-width: 431px) and (max-width: 767px) {
-    .titulousalabtxt {
-        font-size: 1rem;
-    }
-}
-
-@media (min-width: 375px) and (max-width: 430px) {
-    .titulousalabtxt {
-        font-size: 1rem;
+    .eventos-cards-container {
+        width: 75%;
+        height: 75rem;
+        gap: 2rem;
     }
 }
