--- a/public/css/components/eventos/lightBox_carousel.css
+++ b/public/css/components/eventos/lightBox_carousel.css
@@ -1,8 +1,4 @@
 /* Carousel */
-.carousel-item {
-    border: solid red 5px;
-}
-
 .contenedorImageText {
     display: flex;
     width: 100%;
@@ -10,8 +6,6 @@
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
-
-    border: solid purple 5px;
 }
 
 .tipografiaImageText {
@@ -23,8 +17,6 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-
-    border: solid cyan 5px;
 }
 
 /* --------- Animaciones del carousel --------- */
@@ -40,19 +32,28 @@
 }
 
 .slide-title.shrink {
-    transform: translateX(-2%) scale(0.9);
+    transform: translateX(-5%) scale(0.6);
     width: 60%;
     opacity: 0.7;
 }
 
+.slide-title.shrink br.responsive {
+    display: none;
+}
+
+.carousel-caption {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+}
+
 .carousel-caption p {
-    border: solid orange 5px;
-    height: auto;
+    margin: 0;
 }
 
 /* Animaciones para el texto adicional */
 .extra-text {
-    width: 40%;
+    width: 50%;
     height: 40%;
     transition: opacity 0.5s ease, transform 0.5s ease;
     opacity: 0;
@@ -67,8 +68,6 @@
     font-style: normal;
     font-weight: 300;
     line-height: normal;
-
-    border: solid cyan 5px;
 }
 
 /* Texto adicional cuando se muestra */
@@ -100,7 +99,7 @@
     line-height: normal;
     
     /* Position */
-    margin-top: 2rem;
+    margin-top: 1.5rem;
     cursor: pointer;
     display: block;
     margin-left: auto;
@@ -115,7 +114,7 @@
     transition: opacity .6s ease-in-out; /* Reduced from default .6s */
 }
 
-.carousel-fade .-next.carousel-item-start,
+.carousel-fade .next.carousel-item-start,
 .carousel-fade .carousel-item-prev.carousel-item-end {
     transition: opacity .6s ease-in-out; /* Reduced from default .6s */
 }
@@ -124,129 +123,80 @@
     display: none;
 }
 
-@media (min-width: 1441px) /* and (max-width: 1921px) */ {
-    .tipografiaImageText {
-        font-size: 2.5rem;
-    }
-    
-    .extra-text {
-        font-size: 1.2rem;
-    }
-
-    .more-width {
-        width: 54%;
-    }
+.carousel-control-prev,
+.carousel-control-next {
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 4%;
+    height: calc(100% - var(--margin-med));
+    margin-top: var(--margin-med);
 }
 
-/* @media (min-width: 1025px) and (max-width: 1440px) {
-    .tipografiaImageText {
-        font-size: 1.6rem;
-    }
-    
-    .extra-text {
-        font-size: 0.8rem;
-        width: 50%;
-        height: 50%;
-    }
-} */
-
-/* --------- ESTO ES PARA TABLETS ---------- */
-@media (min-width: 821px) and (max-width: 1024px) {
-    .slide-title.shrink {
-        display: none;
-    }
-
+@media (max-width: 1024px) {
     .carousel-item img {
-        min-height: 18rem;
+        min-height: 12rem;
     }
 
-    .tipografiaImageText {
-        font-size: 1.8rem;
-    }
-
-    .extra-text {
-        width: 80%;
-        left: 10%;
-        font-size: 1.2rem;
-    }
-
-    /* .more-width {
-        width: 95%;
-    } */
-}
-
-@media (min-width: 768px) and (max-width: 820px) {
     .slide-title.shrink {
         display: none;
     }
 
+    .tipografiaImageText {
+        font-size: 1.5rem;
+    }
+
+    .extra-text {
+        width: 84%;
+        right: 8%;
+    }
+
+    .carousel-control-prev,
+    .carousel-control-next {
+        width: 8%;
+    }
+}
+
+@media (max-width: 820px) {
+    .btn-mas-info {
+        display: none;
+    }
+}
+
+@media (max-width: 767px) {
     .carousel-item img {
         min-height: 15rem;
         object-fit: cover;
     }
 
-    .tipografiaImageText {
-        font-size: 1.6rem;
-    }
-
-    .extra-text {
-        width: 80%;
-        left: 10%;
-        font-size: 0.9rem;
-    }
-}
-
-@media (max-width: 768px) {
-    .carousel-item img {
-        /* height: 25vh; */
-        object-fit: cover;
+    .contenedorImageText {
+        padding-bottom: 2.5rem;;
     }
 
     .tipografiaImageText {
         font-size: 1.2rem;
     }
-    
+
     .extra-text {
-        width: 80%;
-        right: 10%;
+        width: 98%;
+        right: 1%;
+        font-size: 0.9rem;
     }
 
     .btn-mas-info {
-        font-size: 0.8rem;
-        padding: 0.8rem 0;
-        margin-top: 0.5rem;
-    }
-}
-
-@media (min-width: 375px) and (max-width: 430px) {
-    .slide-title.shrink {
         display: none;
     }
 
-    .tipografiaImageText {
-        font-size: 0.8rem;
+    .carousel-control-prev,
+    .carousel-control-next {
+        width: 46%;
+        margin-top: calc(14rem);
+        height: 2.5rem;
     }
 
-    .carousel-item img {
-        /* min-height: 200px; */
-        min-height: 10rem;
+    .carousel-control-prev {
+        left: 2%;
     }
 
-    .extra-text {
-        font-size: 0.6rem;
-    }
-
-    .more-width {
-        width: 95%;
-        left: 1%;
-    }
-
-    .bigger-title {
-        font-size: 2rem;
-    }
-
-    .btn-mas-info {
-        font-size: 0.5rem;
-        padding: 0.5rem 0;
+    .carousel-control-next {
+        right: 2%;
     }
 }
