--- a/public/css/components/eventos/ultimos-eventos.css
+++ b/public/css/components/eventos/ultimos-eventos.css
@@ -5,8 +5,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 4rem;
-    /* padding: 3rem 0; */
+    margin-top: var(--margin-big);
 }
 
 .ultimos-eventos-title {
@@ -23,6 +22,9 @@
 .ultimos-eventos-cards {
     width: 60%;
     height: 50vh;
+    /* max-width: 20rem; */
+    /* max-height: 20rem; */
+    min-height: 18rem;
     display: flex;
     flex-direction: row;
     gap: 20px;
@@ -81,7 +83,8 @@
     letter-spacing: 0.55px;
 }
 
-.title-event-card, .text-event-card{
+.title-event-card, 
+.text-event-card {
     position: relative;
     z-index: 1;
 }
@@ -97,75 +100,17 @@
     letter-spacing: 0.32px;
 }
 
-.carousel-control-prev,
-.carousel-control-next {
-    width: 4%;
-    background-color: rgba(255, 255, 255, 0.5);
-}
-
-/* @media (min-width: 1921px) {
-    .ultimos-eventos-title h2 {
-        font-size: 3rem;
-    }
-
-    .text-event-card {
-        font-size: 1rem;
-    }
-} */
-
-@media (min-width: 1440px) and (max-width: 2100px){
-    .title-event-card h2 {
-        font-size: 3rem;
-    }
-
-    .title-event-card {
-        font-size: 1.5rem;
+@media (max-width: 1024px) {
+    .ultimos-eventos-cards {
+        width: 75%;
     }
 
     .event-card {
-        /* width: 60%; */
-    }
-
-    .ultimos-eventos-title {
-        padding-right: 50px;
+        width: 80%;
     }
 }
 
-@media (max-width: 1024px) {
-    .carousel-control-prev, .carousel-control-next {
-        width: 10%;
-    }
-}
-
-@media (min-width: 821px) and (max-width: 1024px) {
-    .ultimos-eventos-title h2 {
-        font-size: 2rem;
-    }
-
-    .title-event-card {
-        font-size: 1.5rem;
-    }
-
-    .text-event-card {
-        font-size: 1rem;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 820px) {
-    .ultimos-eventos-title h2 {
-        font-size: 3rem;
-    }
-
-    .title-event-card {
-        font-size: 2rem;
-    }
-
-    .text-event-card {
-        font-size: 1.5rem;
-    }
-}
-
-@media (max-width: 821px) {
+@media (max-width: 767px) {
     .ultimos-eventos-container {
         flex-direction: column;
         width: 100%;
@@ -177,25 +122,17 @@
     }
 
     .ultimos-eventos-cards {
-        width: 85%;
+        width: 75%;
+        min-width: 16rem;
         min-height: 350px;
     }
 
     .event-card {
         width: 85%;
+        max-width: 15rem;
     }
 
     br.responsive {
         display: none;
-    }
-}
-
-@media (max-width: 430px) {
-    .ultimos-eventos-cards {
-        width: 95%;
-    }
-
-    .event-card {
-        width: 90%;
     }
 }
