updated academy page

--- a/public/css/components/academica/maestria.css
+++ b/public/css/components/academica/maestria.css
@@ -1,329 +1,261 @@
-/***Letreo verde de los objetivos generales*/
-
-.objetivoMaestria
-{
+/*** Letreo verde de los objetivos generales */
+.objetivoMaestria {
     display: flex;
     flex-direction: column;
-    width: 1728px;
-    height: 554px;
-    flex-shrink: 0;
+    width: 100%; /* Usamos 100% en lugar de un valor fijo en píxeles */
+    height: auto; /* Ajustamos la altura a automático para que se adapte */
     background: #A7C741;
-    padding: 80px 329px 114px 335px;
+    padding: 5% 10%; /* Usamos porcentajes para un padding flexible */
+    align-items: center;
+    overflow-x: auto; /* Agregamos una barra de desplazamiento horizontal si es necesario */
+}
+
+.objetivoMaestriaTitulo {
+    display: flex;
+    flex-shrink: 0;
+    margin-bottom: 5%;
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 5vw; /* Tamaño de fuente relativo al tamaño de la pantalla */
+    font-weight: 700;
+    line-height: normal;
     align-items: center;
 }
 
-.objetivoMaestriaTitulo
-{
-    display: flex;
-
-    flex-shrink: 0;
-    margin-bottom: 46px;
-    color: #FFF;
-    font-family: Montserrat;
-    font-size: 55px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    align-items:  center;
-}
-
-.objetivoMaestriaCont
-{
-    width: 1064px;
-    height: 194px;
-    flex-shrink: 0;
-    padding-top: 53px;
+.objetivoMaestriaCont {
+    width: 100%; /* Usamos 100% en lugar de un valor fijo en píxeles */
+    max-width: 1200px; /* Definimos un máximo para no sobrepasar el contenedor */
+    height: auto;
+    padding-top: 2vw;
     color: #FFF;
     text-align: justify;
     font-family: Montserrat;
-    font-size: 32px;
-    font-style: normal;
+    font-size: 2.5vw; /* Tamaño de fuente relativo al tamaño de la pantalla */
     font-weight: 400;
     line-height: normal;
     letter-spacing: 0.32px;
 }
 
-/**************Estilos para el perfil de ingreso****************/
-
-.perfilIngresoMaestria
-{
+/************** Estilos para el perfil de ingreso ****************/
+.perfilIngresoMaestria {
     display: flex;
-    flex-direction: row;
-    width: 1728x;
-    height: 992px;
+    justify-content: space-between; /* Distribuye el contenido en dos columnas */
+    align-items: center;
+    padding: 5%;
+    width: 100%;
 }
 
-.perfilIngresoMaestriaBox
-{
-    padding: 257px 115px 228px 181px;
+.perfilIngresoMaestriaBox {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    padding: 8%;
+}
+
+.perfilIngresoMaestriaTitulo {
+    color: #000;
+    font-family: Montserrat;
+    font-size: 55px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 35px;
+}
+
+.perfilIngresoMaestriaCont {
+    font-family: Montserrat;
+    font-size: 32px;
+    font-weight: 400;
+    text-align: justify;
+    line-height: normal;
+}
+
+.perfilIngresoMaestria img {
+    width: 35%;
+    object-fit: cover; /* Asegura que la imagen se ajuste sin distorsión */
+    margin-top: 20px;
+}
+
+
+.tarjetasMC {
+    margin-top: 5%;
+    width: 100%;
+    overflow-x: auto; 
     align-items: center;
 }
 
-.perfilIngresoMaestriaTitulo
-{
-    flex-shrink: 0;
-    color: #000;
-    text-align: center;
-    font-family: Montserrat;
-    font-size: 55px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
-
-.perfilIngresoMaestriaCont
-{
-    padding-top: 80px;
-    flex-shrink: 0;
-    color: #000;
-    text-align: justify;
-    font-family: Montserrat;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
-
-.perfilIngresoMaestria img
-{
-    margin-top: 80px;
-    margin-right: 181px;
-}
-
-.tarjetasMC
-{
-    margin-top: 80px;
-}
-
-.tituloTarTextoMC
-{
+.tituloTarTextoMC {
     position: absolute;
     top: 80%;
     left: 50%;
-    transform: translate(-40%, -50%);
-    color:white;
+    transform: translate(-50%, -50%);
+    color: white;
     font-family: Montserrat;
-    font-size: 40px;
-    font-style: normal;
+    font-size: 2rem; /* Usamos rem para un tamaño más consistente */
     font-weight: 700;
-    line-height: normal;
-    text-align: left;
+    text-align: right;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 374px;
+    width: 90%; /* Usamos porcentaje para el ancho */
 }
 
-
-
-.egreso
-{
-    margin-top: 80px;
+/************** Egreso **************/
+.egreso {
+    margin-top: 5%;
     display: flex;
     flex-direction: column;
     position: relative;
+    height: 500px;
+    overflow: hidden;
 }
 
-.tituloEgreso
-{
+/* Imagen de fondo para cubrir todo el contenedor .egreso */
+.egreso-img {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ajusta la imagen para cubrir el área sin distorsión */
+    z-index: -1; /* Para que quede detrás del contenido */
+}
+
+.tituloEgreso {
     position: absolute;
-    margin-top: 36px;
-    margin-left: 169px;
+    margin-top: 3%;
+    margin-left: 5%;
     flex-shrink: 0;
     color: #FFF;
     font-family: Montserrat;
-    font-size: 55px;
-    font-style: normal;
+    font-size: 55px; /* Tamaño de fuente relativo al tamaño de la pantalla */
     font-weight: 700;
-    line-height: normal;
+    line-height: 100%;
 }
 
-.textoEgreso
-{
+.textoEgreso {
     position: absolute;
-    width: 1480px;
-    height: 233px;
+    width: 90%; /* Usamos porcentaje para que se ajuste al tamaño de la pantalla */
+    height: auto;
     flex-shrink: 0;
     color: #FFF;
     text-align: justify;
     font-family: Montserrat;
-    font-size: 32px;
-    font-style: normal;
+    font-size: 32px; /* Tamaño de fuente relativo al tamaño de la pantalla */
     font-weight: 400;
-    line-height: normal;
-    letter-spacing: 0.32px;
-
-    margin-top: 139px;
-    margin-left: 169px;
+    line-height: 100%;
+    letter-spacing: 1px;
+    margin-top: 10%;
+    margin-left: 5%;
 }
 
-.procesoAdministrativo
-{
+/************** Proceso Administrativo **************/
+
+.procesoAdministrativo {
     display: flex;
     flex-direction: column;
-}
-.procesoAdministrativoTitulo
-{
     align-items: center;
+}
+
+.procesoAdministrativoTitulo {
     color: #000;
     text-align: center;
     font-family: Montserrat;
-    font-size: 55px;
-    font-style: normal;
+    font-size: 55px; /* Tamaño de fuente relativo al tamaño de la pantalla */
     font-weight: 600;
     line-height: normal;
     flex-shrink: 0;
 }
 
-.procesoAdministrativoFechas
-{
+.procesoAdministrativoFechas {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.procesoAdministrativoFechasTitulo
-{
+.procesoAdministrativoFechasTitulo {
     flex-shrink: 0;
-    color:#000;
+    color: #000;
     text-align: center;
     font-family: Montserrat;
-    font-size: 32px;
-    font-style: normal;
+    font-size: 32px; /* Tamaño de fuente relativo al tamaño de la pantalla */
     font-weight: 700;
     line-height: normal;
-    margin-top: 94px;
+    margin-top: 5%;
 }
 
-.procesoAdministrativoFechasTexto
-{
-    width: 1172px;
-
+.procesoAdministrativoFechasTexto {
+    width: 90%; /* Usamos porcentaje para que se ajuste al tamaño de la pantalla */
     flex-shrink: 0;
-    color:#000;
+    color: #000;
     font-family: Montserrat;
-    font-size: 32px;
-    font-style: normal;
+    font-size: 32px; /* Tamaño de fuente relativo al tamaño de la pantalla */
     font-weight: 400;
     line-height: normal;
-    margin-top: 30px;
+    margin-top: 2%;
 }
 
-.procesoAdministrativoDocumentacion
-{
+.procesoAdministrativoDocumentacion {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 80px;
+    margin-top: 5%;
     background: #06052D;
+    padding: 5%;
 }
 
-.procesoAdministrativoDocumentacionTitulo
-{
+.procesoAdministrativoDocumentacionTitulo {
     color: #FFF;
     text-align: center;
     font-family: Montserrat;
-    font-size: 55px;
-    font-style: normal;
+    font-size: 55px; /* Tamaño de fuente relativo al tamaño de la pantalla */
     font-weight: 700;
     line-height: normal;
-    margin-top: 56px;
+    margin-top: 5%;
 }
 
-.procesoAdministrativoDocumentacionTexto
-{
-    color:#FFF;
+.procesoAdministrativoDocumentacionTexto {
+    color: #FFF;
     font-family: Montserrat;
-    font-size: 32px;
-    font-style: normal;
+    font-size: 32px; /* Tamaño de fuente relativo al tamaño de la pantalla */
     font-weight: 400;
     line-height: normal;
-    margin-top: 45px;
-    margin-bottom: 56px;
-    width: 1200px;
+    margin-top: 2%;
+    margin-bottom: 3%;
+    width: 90%; /* Usamos porcentaje para que se ajuste al tamaño de la pantalla */
 }
 
-.avisoMC
-{
+/************** Aviso y Documentación **************/
+
+.avisoMC,
+.informesMC {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 80px;
+    margin-top: 5%;
 }
 
-.avisoMCTitulo
-{
+.avisoMCTitulo,
+.informesMCTitulo {
     color: #000;
     text-align: center;
     font-family: Montserrat;
-    font-size: 32px;
-    font-style: normal;
+    font-size: 32px; /* Tamaño de fuente relativo al tamaño de la pantalla */
     font-weight: 700;
     line-height: normal;
 }
 
-.avisoMCTexto
-{
+.avisoMCTexto,
+.informesMCTexto {
     color: #000;
     font-family: Montserrat;
-    font-size: 32px;
-    font-style: normal;
+    font-size: 32px; /* Tamaño de fuente relativo al tamaño de la pantalla */
     font-weight: 400;
     line-height: normal;
     text-align: center;
-    width: 1550px;
+    width: 90%; /* Usamos porcentaje para que se ajuste al tamaño de la pantalla */
 }
 
-.avisoMCTexto a
-{
+.avisoMCTexto a,
+.informesMCTexto a {
     color: #000;
     text-decoration-line: underline;
-    text-decoration-style: solid;
     text-decoration-skip-ink: none;
-    text-decoration-thickness: auto;
-    text-underline-offset: auto;
-    text-underline-position: from-font;
-}
-
-.informesMC
-{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 80px;
-}
-
-.informesMCTitulo
-{
-    color: #000;
-    text-align: center;
-    font-family: Montserrat;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
-
-.informesMCTexto
-{
-    color: #000;
-    font-family: Montserrat;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-align: center;
-    width: 1510px;
-}
-
-.informesMCTexto a
-{
-    color: #000;
-    text-decoration-line: underline;
-    text-decoration-style: solid;
-    text-decoration-skip-ink: none;
-    text-decoration-thickness: auto;
-    text-underline-offset: auto;
-    text-underline-position: from-font;
 }
