--- a/public/css/academica.css
+++ b/public/css/academica.css
@@ -1,19 +1,19 @@
 /*******Contenedor del Titulo carrusel Formacion Academica*******/
 .titulonosotros {
     display: flex;
-    width: 1152px;
-    height: 136px;
+    width: 100%;
+    height: 20vh;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
-    margin-bottom: 104px;
+    margin-bottom: 6vh;
     animation: titulonosotros 1.5s forwards;
 }
 
 /******Imagen del Carrusel******/
 .img1 {
     width: 100%;
-    height: 880px;
+    height: 100vh;
     object-fit: cover;
     background: rgba(0, 0, 0, 0.30);
     filter: brightness(75%);
@@ -24,21 +24,21 @@
     color: #FFF;
     text-align: center;
     text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
-    font-family: Montserrat;
-    font-size: 80px;
+    font-family: Montserrat, sans-serif;
+    font-size: 6vw;
     font-style: normal;
     font-weight: 900;
     line-height: normal;
-    letter-spacing: 0.8px;
+    letter-spacing: 0.05em;
 }
 
 /******Contenedor del contenido del carrusel Nosotros*****/
 .contenidonosotros {
-    width: 1728px;
-    height: 288px;
+    width: 100%;
+    height: 20vh;
     display: flex;
-    margin-bottom: -40px;
-    margin-left: -260px;
+    margin-bottom: -2vh;
+    margin-left: 0;
     flex-shrink: 0;
     background: rgba(0, 0, 0, 0.30);
     justify-content: center;
@@ -48,20 +48,20 @@
 
 /*****Texto del contenido del carrusel Nosotros*****/
 .contenidonosotrostxt {
-    width: 1485px;
+    width: 85%;
     flex-shrink: 0;
     color: #FFF;
     text-align: justify;
-    font-family: Montserrat;
-    font-size: 32px;
+    font-family: Montserrat, sans-serif;
+    font-size: 2vw;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    letter-spacing: 0.32px;
+    letter-spacing: 0.02em;
 }
 
 .separador2 {
-    height: 160px;
+    height: 10vh;
     width: 100%;
 }
 
@@ -72,7 +72,7 @@
 }
 
 .separador3 {
-    height: 80px;
+    height: 5vh;
     width: 100%;
 }
 
@@ -80,11 +80,6 @@
     width: 941px;
     height: 2px;
     background: #DADADA;
-}
-
-.separador3 {
-    height: 80px;
-    width: 100%;
 }
 
 .lineadiv {
