--- a/public/css/components/academica/practicas-profesionales.css
+++ b/public/css/components/academica/practicas-profesionales.css
@@ -6,7 +6,7 @@
 
 .requisitoppCard{
     position: relative;
-    width: 1728px;
+    width: 100%;
     height: 324px;
     margin: 20px 0 20px 0;
 }
@@ -18,7 +18,7 @@
 }
 
 .requisitopptitulo{
-    width: 614px;
+    width: 600px;
     flex-shrink: 0;
 
     color: #FFF;
@@ -30,12 +30,12 @@
 
     position: absolute;
     top:50%;
-    left: 119px;
+    left: 50px;
     transform: translate(0%, -50%);
 }
 
 .requisitoppp{
-    width: 715px;
+    width: 600px;
     flex-shrink: 0;
 
     color: #FFF;
@@ -49,6 +49,6 @@
 
     position: absolute;
     top:50%;
-    right: 120px;
+    right: 10px;
     transform: translate(0%, -50%);
 }
