--- a/public/css/academica.css
+++ b/public/css/academica.css
@@ -2,7 +2,6 @@
 .titulonosotros {
     display: flex;
     width: 100%;
-    height: 20vh;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
@@ -25,7 +24,7 @@
     text-align: center;
     text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25);
     font-family: Montserrat, sans-serif;
-    font-size: 6vw;
+    font-size: 80px;
     font-style: normal;
     font-weight: 900;
     line-height: normal;
@@ -35,9 +34,8 @@
 /******Contenedor del contenido del carrusel Nosotros*****/
 .contenidonosotros {
     width: 100%;
-    height: 20vh;
     display: flex;
-    margin-bottom: -2vh;
+    margin-bottom: -5vh;
     margin-left: 0;
     flex-shrink: 0;
     background: rgba(0, 0, 0, 0.30);
@@ -53,7 +51,7 @@
     color: #FFF;
     text-align: justify;
     font-family: Montserrat, sans-serif;
-    font-size: 2vw;
+    font-size: 32px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
