--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,30 +31,30 @@
     letter-spacing: 0.8px;
 }
 .contenidousalab {
-    width: 100%;
+    width: 150%;
     height: 248px;
-    background: rgba(192, 192, 192, 0.30);
     display: flex;
-    flex-direction: column;
+    padding: 46px 164px 46px 164px;
+    margin-bottom: -288px;
+    margin-left: -260px;
+    flex-shrink: 0;
+    background: rgba(192, 192, 192, 0.30);
     justify-content: center;
     align-items: center;
     animation: contenidousalab 1.5s forwards;
 }
 .contenidousalabtxt {
-    width: 1768px; /* Fijamos el ancho a 1768px */
-    max-width: 80%;
-    max-height: 152px;
-    font-size: 28px;
-    line-height: 1.2;
+    width: 100%;
+    height: 152px;
+    flex-shrink: 0;
+    color: #FFFCFC;
     text-align: justify;
-    color: #fcfeff;
-    font-family: Montserrat, sans-serif;
+    font-family: Montserrat;
+    font-size: 32px;
+    font-style: normal;
     font-weight: 400;
+    line-height: 40px;
     letter-spacing: 0.32px;
-    margin: 0;
-    padding: 0;
-    flex-shrink: 1;
-    overflow: hidden; /* Evita que el texto se desborde */
 }
 
 
