--- a/public/css/components/investigacion/lineas-de-investigacion.css
+++ b/public/css/components/investigacion/lineas-de-investigacion.css
@@ -100,28 +100,27 @@
 @media (min-width: 768px) and (max-width: 1024px) and (min-height: 512px) and (max-height: 1366px) {
 
     .lineas-de-investigacion-container {
-        height: 100%;
-        max-height: 100vh;
-        overflow-y: auto;
+        height: 750px;
+       
+      
     }
 /* Contenedor de la sección "Líneas de Investigación"*/
 .lineas-de-investigacion-list {
-    max-height: 500px; /* ajusta según necesidad */
+    
     overflow-y: auto;
+    width: 100%;
+    height: 400px;
+    gap: 50px;
 }
 /* Titulo "Líneas de Investigación" */
-.lineas-de-investigacion-title {
-    margin: 75px auto 76px auto; /* top, right/left, bottom */
-    width: 677px;
-    text-align: center;
-    font-size: 30px;
-}
 
-/* Contenedor para lista de líneas de investigación */
-.lineas-de-investigacion-list {
-    width: 100%;
-    height: 876px;
-    gap: 50px;
+.lineas-de-investigacion-title {
+    margin-top: 80px;
+    margin-bottom: 0px;
+    width: auto;
+    height: auto;
+    font-size: 5vw;
+    
 }
 
 
@@ -164,29 +163,27 @@
 
 @media (max-width: 430px) {
     .lineas-de-investigacion-container {
-        height: 100%;
-        max-height: 100vh;
-        overflow-y: auto;
+        height: 550px;
+       
+      
     }
 /* Contenedor de la sección "Líneas de Investigación"*/
 .lineas-de-investigacion-list {
-    max-height: 500px; /* ajusta según necesidad */
+    
     overflow-y: auto;
+    width: 100%;
+    height: 400px;
+    gap: 50px;
 }
 /* Titulo "Líneas de Investigación" */
 .lineas-de-investigacion-title {
-    margin: 75px auto 76px auto; /* top, right/left, bottom */
+    margin: 30px auto 0px auto;
+  
     width: 100%;
     text-align: center;
-    font-size: 7vw;
+    font-size: 5vw;
 }
 
-/* Contenedor para lista de líneas de investigación */
-.lineas-de-investigacion-list {
-    width: 100%;
-    height: 876px;
-    gap: 50px;
-}
 
 
 
