--- a/public/css/components/investigacion/publicaciones.css
+++ b/public/css/components/investigacion/publicaciones.css
@@ -9,7 +9,7 @@
 /* Titulo "Publicaciones" */
 .publicaciones-title {
     justify-self: center;
-    width: 30%;
+    width: auto;
     height: 60px;
     flex-shrink: 0;
     color: #000;
@@ -121,7 +121,13 @@
 /***************************tablet******************************************/
 @media (min-width: 768px) and (max-width: 1024px) and (min-height: 512px) and (max-height: 1366px) {
    
-      
+
+    .publicaciones-container {
+        width: 100%;
+        margin-top: 50px;
+        height: 1000px;
+        display: grid;
+    }   
 /* Titulo "Publicaciones" */
 .publicaciones-title {
     font-size: 40px;  
@@ -132,12 +138,14 @@
 .publicaciones-list {
    
     width: 100%;
-    height: 1040px;
+    height: 920px;
   
 }
 
 .vertical-line { 
     left: 40%;
+ 
+    height: 100%;
 }
 
 .publication-card {
@@ -186,33 +194,37 @@
 @media (max-width: 430px) {
 
     .publicaciones-container {
-        height: 900px;
-        margin-top: 10px;
-      
-    }  
+        width: 100%;
+        margin-top: 50px;
+        height: 1000px;
+        display: grid;
+    } 
 /* Titulo "Publicaciones" */
 .publicaciones-title {
     height: 20px;
     font-size: 5vw;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 
 /* Contenedor para la lista de publicaciones */
+/* Contenedor para la lista de publicaciones */
 .publicaciones-list {
    
     width: 100%;
-    height: 900px;
+    height: 1000px;
   
 }
 
 .vertical-line { 
     left: 40%;
+ 
+    height: 100%;
 }
 
 .publication-card {
     width: 100%;
-    height: 15%;
+    height: 12%;
 }
 
 /* Contenedor de la imagen de la publicación */
