--- a/public/css/components/home/bienvenidos-usalab.css
+++ b/public/css/components/home/bienvenidos-usalab.css
@@ -3,7 +3,8 @@
 .bienvenidos-a-usalab-container {
     margin-top: 86px;
     height: 442px;
-    width: 1728px;
+    width: 100%;
+
 }
 
 /* Titulo "Bienvenidos a UsaLab" */
@@ -20,7 +21,7 @@
 
 /* Contenido de la sección "Bienvenidos a UsaLab" */
 .content-bienvenidos-a-usalab {
-    width: 1728px;
+    width: 100%;
     height: 324px;
     flex-shrink: 0;
     background: url("../../../photos/bienvenidos-a-usalab.png") lightgray 50% / cover no-repeat;
@@ -31,7 +32,7 @@
 /* Texto de la sección "Bienvenidos a UsaLab" */
 .bienvenidos-a-usalab-text {
     margin-top: 53px;
-    width: 1544px;
+    width: 96%;
     height: 215px;
     flex-shrink: 0;
     color: #FFF;
@@ -49,7 +50,7 @@
 .nuestra-historia-container {
     margin-top: 45px;
     height: 426px;
-    width: 1728px;
+    width: 100%;
 }
 
 /* Titulo "Nuestra Historia" */
@@ -66,7 +67,7 @@
 
 /* Contenido de la sección "Nuestra Historia" */
 .content-nuestra-historia {
-    width: 1728px;
+    width: 100%;
     height: 324px;
     flex-shrink: 0;
     background: url("../../../photos/nuestra-historia.png") lightgray 50% / cover no-repeat;
@@ -77,7 +78,7 @@
 /* Texto de la sección "Nuestra Historia" */
 .nuestra-historia-text {
     margin-top: 39px;
-    width: 1544px;
+    width: 100%;
     height: 215px;
     flex-shrink: 0;
     color: #FFF;
@@ -95,7 +96,7 @@
 .experiencias-container {
     margin-top: 53px;
     height: 434px;
-    width: 1728px;
+    width: 1358px;
 }
 
 /* Titulo "Experiencias" */
@@ -112,7 +113,7 @@
 
 /* Contenido de la sección "Experiencias" */
 .content-experiencias {
-    width: 1728px;
+    width: 1358px;
     height: 324px;
     flex-shrink: 0;
     background: url("../../../photos/experiencias.jpg") lightgray 50% / cover no-repeat;
