--- a/public/css/academica.css
+++ b/public/css/academica.css
@@ -1,12 +1,12 @@
 /*******Contenedor del Titulo carrusel Formacion Academica*******/
 .titulonosotros {
     display: flex;
-    width: 1152px;
+    width: 1000px;
     height: 136px;
     flex-direction: column;
     justify-content: center;
     flex-shrink: 0;
-    margin-bottom: 104px;
+    margin-bottom: 60px;
     animation: titulonosotros 1.5s forwards;
 }
 
@@ -34,9 +34,10 @@
 
 /******Contenedor del contenido del carrusel Nosotros*****/
 .contenidonosotros {
-    width: 1728px;
-    height: 288px;
+    width: 150%;
+    height: 248px;
     display: flex;
+    padding: 59px 168px 37px 168px;
     margin-bottom: -40px;
     margin-left: -260px;
     flex-shrink: 0;
@@ -48,7 +49,7 @@
 
 /*****Texto del contenido del carrusel Nosotros*****/
 .contenidonosotrostxt {
-    width: 1485px;
+    width: 100%;
     flex-shrink: 0;
     color: #FFF;
     text-align: justify;
