--- a/public/css/components/home/ultimos-eventos.css
+++ b/public/css/components/home/ultimos-eventos.css
@@ -1,7 +1,7 @@
 /************************Ultimos eventos****************************/
 /*****************Fondo Ultimos eventos****************/
 .fondo-azul {
-    width: 1728px;
+    width: 100%;
     height: 912px;
     flex-shrink: 0;
     background: #F9F9F9;
@@ -24,10 +24,11 @@
 
 /************ Contenedor de los eventos ***************/
 .eventosContainer {
-    width: 1010px;
+    width: 100%;
     height: 520px;
     overflow-x: auto;
-    scrollbar-width: none;
+    overflow-y: hidden;
+    scrollbar-width: auto;
     margin-left: 712px;
     margin-top: -327px;
     display: flex;
@@ -35,12 +36,19 @@
 }
 
 .eventosContainer::-webkit-scrollbar {
-    display: none;
+    height: 8pxs;
 }
 
 .scroll-container {
     display: inline-block;
 }
+
+.eventosContainer::after {
+    content: "";
+    display: block;
+    min-width: 50vw;
+}
+
 
 /************* Tarjetas ultimos eventos *************/
 .event-card {
