--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
 /******************************header*******************************/
 .container1 {
-    width: 1728px;
+    width: 100%;
     height: auto;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -439,6 +439,7 @@
 .img1{
     background: rgba(0, 0, 0, 0.30);
     filter: brightness(50%);
+    width: 100%;
 }
 
 .titulousalabtxt {
@@ -454,9 +455,10 @@
 }
 
 .contenidousalab {
-    width: 1728px;
+    width: 150%;
     height: 248px;
     display: flex;
+    padding: 46px 164px 46px 164px;
     margin-bottom: -288px;
     margin-left: -260px;
     flex-shrink: 0;
@@ -474,7 +476,7 @@
 }
 
 .contenidousalabtxt {
-    width: 1392px;
+    width: 100%;
     height: 152px;
     flex-shrink: 0;
     color: #FFFCFC;
