--- a/public/css/components/servicios-industria/tecnicas-de-estudio-de-usabilidad.css
+++ b/public/css/components/servicios-industria/tecnicas-de-estudio-de-usabilidad.css
@@ -49,6 +49,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    hyphens: auto;
 }
 
 /* Estilo del contenedor de las cards de la sección */
